[package]
name = "ses"
version = "0.1.1"
edition = "2021"
description = "Find a file (and actually do something with it) using es ⚡"
readme = true 
repository = "https://github.com/jake-pauls/ses"
keywords = ["windows", "search", "es", "utility"]
categories = ["command-line-utilities", "filesystem"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
dialoguer = "0.10.1"
ansi_term = "0.12.1"